tests/tooling/fixtures/native/recovery/positive/separator_literal_global_initializer_chain.objc3
module SeparatorLiteralGlobalInitializerChain;

let a = 1_0;
let b = a + 0b1_1;
let c = b + 0o7;
let d = c + 0xA_A;

fn main() -> i32 {
  return d;
}
