tests/tooling/fixtures/native/recovery/negative/negative_octal_literal_parser_missing_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeOctalLiteralParserMissingRhs;

let value = 0o2 + ;

fn main() -> i32 {
  return 0;
}
